# ai-status

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
adapters/claude-code/: asb_hook.py
adapters/codex/: asb_notify.py  asb_notify_chain.sh
adapters/cursor/: asb_cursor_hook.py
docs/: detection-spec.md  device-api.md
scripts/: add-device-firewall.ps1  demo-events.sh  install-claude-hooks.py  install-codex-notify.py  install-cursor-hooks.py  test-hook-events.sh  verify-window.ps1
src/: App.tsx  Panel.tsx  main.tsx  styles.css  styles.win.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  claude_hooks.rs  codex.rs  codex_notify.rs  config.rs  cursor_hooks.rs  device.rs  hook_client.rs  lib.rs  main.rs  net.rs  server.rs  store.rs  watcher.rs
src/components/: MarqueeText.tsx  QuotaIcon.tsx  StatusIcon.tsx  TaskRow.tsx  ToolSection.tsx
src/core/: config.ts  datasource.ts  i18n.ts  mock.ts  status.ts  types.ts  useAgentState.ts
src/core/__tests__/: status.test.ts
