[package]
name = "agent-status-board"
version = "1.0.18"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_status_board_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
# preserve_order: rewriting ~/.claude/settings.json must keep the user's key order intact
serde_json = { version = "1", features = ["preserve_order"] }
# lossless TOML editing: rewriting ~/.codex/config.toml must keep comments and formatting
toml_edit = "0.22"
tiny_http = "0.12"
# already in the dependency tree via tauri; declared directly for local-time quota-reset math
chrono = { version = "0.4", default-features = false, features = ["clock"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }
